syntax = "proto3";

package notify_remote;

service Notifier {
    rpc Notify (NotificationRequest) returns (NotificationReply) {}
}

message NotificationRequest {
    string summary = 1;
    string body = 2;
}

message NotificationReply {
    uint32 return_code = 1;
    string error = 2;
}